:books: docs: Ajustes na documentação swagger de edição de usuários
